# TodayOS

./: README.md  main.py  pyproject.toml  requirements.txt
scripts/: bootstrap.sh  build_and_install_kernel.sh  setup_todayos_autostart.sh
src/todayos/: __init__.py  core.py
src/todayos/apps/: bitmap_viewer.py  filemanager.py  notepad.py  shell.py
